[gd_scene load_steps=6 format=3 uid="uid://bp2xanjout26b"]

[ext_resource type="Script" path="res://Scripts/room_interaction.gd" id="1_5bnw3"]
[ext_resource type="Texture2D" uid="uid://clw7heb44oiwh" path="res://Resources/Images/alt_borders.png" id="2_u5nqd"]
[ext_resource type="Theme" uid="uid://dfeo3ebchf3ul" path="res://Resources/Themes/Default_Theme.tres" id="3_3375r"]
[ext_resource type="Texture2D" uid="uid://btx4ggah7hprg" path="res://Resources/Images/Rooms/rooms_units.png" id="4_jhxcl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3jri"]
size = Vector2(128, 88)

[node name="TemplateRoom" type="Node2D"]
script = ExtResource("1_5bnw3")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 130.0
offset_bottom = 90.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 10
text = "temp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 10
text = "temp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 10
text = "temp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
texture = ExtResource("2_u5nqd")
centered = false
region_enabled = true
region_rect = Rect2(130, 360, 130, 90)
region_filter_clip_enabled = true

[node name="Overlay" type="ColorRect" parent="ColorRect/Sprite2D"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.184314, 0.164706, 0.207843, 1)

[node name="Mark" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 910.0
offset_bottom = 630.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.125, 0.125)
theme = ExtResource("3_3375r")
theme_override_colors/font_color = Color(0, 1, 0.576471, 1)
theme_override_colors/font_outline_color = Color(0, 0.454902, 0, 1)
theme_override_constants/outline_size = 65
theme_override_font_sizes/font_size = 640
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Unit_collector" type="Node2D" parent="ColorRect"]

[node name="Status_collector" type="Node2D" parent="ColorRect"]

[node name="room_texture" type="Sprite2D" parent="ColorRect"]
z_index = -1
texture_filter = 1
position = Vector2(-2.38419e-07, 0)
scale = Vector2(4.0625, 5)
texture = ExtResource("4_jhxcl")
centered = false
region_enabled = true
region_rect = Rect2(35, 0, 32, 18)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(65, 45)
shape = SubResource("RectangleShape2D_m3jri")
debug_color = Color(0.602736, 0.542318, 1.92523e-07, 0.42)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
